--- a/client/src/components/matchs/creatematch.scss
+++ b/client/src/components/matchs/creatematch.scss
@@ -31,7 +31,7 @@
         border-radius: 2rem;
         border: solid 4px var(--mmy);
         box-shadow: 10px 2px 3px --blackColor(140, 140, 141, 0.549);
-        background: hsl(173, 82%, 24%);
+        background: rgb(56,56,56);
 
         
 
@@ -50,17 +50,28 @@
             transform: translate(3rem,2.1rem);
             .matchnameinp{
 
-                border-radius: 1rem;
-                height: 2.5rem;
-                width: 13rem;
-                border: var(--whiteColor) solid 3px;
+           width: 13rem;
+                border: 0;
+                border-bottom: 2px solid var(--greytext);
+                outline: 0;
+                font-size: 1.05rem;
                 color: black;
-                background: var(--whiteColor);
-                &:focus{
-                    border: solid 2px var(--mmy);
-                    outline: none; 
-        
+                padding: 7px 0;
+                background: transparent;
+                transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+             
+
+                &::placeholder {
+                    color: gray;
                 }
+
+        
+                &:focus {
+                    padding-bottom: 6px;
+                    font-weight: 400;
+                    border-width: 3px;
+                    border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+                    border-image-slice: 1;}
 
 
             }
@@ -70,19 +81,28 @@
     .reservationdate{
         transform: translate(20.5rem,-.40rem);
         .reservationdat{
-            border-radius: 1rem;
-            height: 2.5rem;
-            width: 14.9rem;
-            border: var(--whiteColor) solid 3px;
-            font-weight: 400;
-            font-size: 17px;
-            color: black;
-            background: var(--whiteColor);
-            &:focus{
-                border: solid 2px var(--mmy);
-                outline: none; 
+            width: 13rem;
+            border: 0;
+            border-bottom: 2px solid var(--greytext);
+            outline: 0;
+            font-size: 1.05rem;
+            color: gray;
+            padding: 7px 0;
+            background: transparent;
+            transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+         
+
+      
     
-            }
+            &:focus {
+                padding-bottom: 6px;
+                font-weight: 400;
+                border-width: 3px;
+                border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+                border-image-slice: 1;}
+
+
+        }
 
         }
 
@@ -91,40 +111,43 @@
     .chosefield{
         transform: translate(3.5rem,1rem);
         .chosef{
-            border-radius: 1rem;
-            height: 2.5rem;
-            width: 32rem;
-           
-            font-weight: 400;
-            font-size: 17px;
-            border: var(--whiteColor) solid 3px;
-            color: black;
-            background: var(--whiteColor);
-            &:focus{
-                border: solid 2px var(--mmy);
-                outline: none; 
-    
-            }
+            width: 30rem;
+            border: 0;
+            border-bottom: 2px solid var(--greytext);
+            outline: 0;
+            font-size: 1.05rem;
+            color: gray;
+            padding: 7px 0;
+            background: transparent;
+            transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+         
 
-            .fields{
-                color: var(--blackColor2);
-                
-            }
+    
+            &:focus {
+                padding-bottom: 6px;
+                font-weight: 400;
+                border-width: 3px;
+                border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+                border-image-slice: 1;}
+
+
+        }
         }
 
 
-    }
+    
     .descrip{
-        transform: translate(6.4rem,0rem);
+        transform: translate(5.5rem,0rem);
         
         .descripp{
             width: 32rem;
             height: 9rem;
             border-radius: 0.5rem;
-            color: black;
+            color: white;
             border: var(--whiteColor) solid 3px;
+            font-size: 15px;
 
-            background: var(--whiteColor);
+            background: rgb(56,56,56);
             &:focus{
                 border: solid 2px var(--mmy);
                 outline: none; 
@@ -151,4 +174,3 @@
             background:var(--PrimaryColor) ;
         }
     }
-}
