--- a/client/src/components/matchs/match.scss
+++ b/client/src/components/matchs/match.scss
@@ -33,7 +33,7 @@
             border-radius: 10px;
             align-items: center;
             background: var(--cardBG);
-            box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
+            box-shadow:1 2px 2px rgba(140, 140, 141, 0.549);
             overflow: hidden;
 
             &:hover {
@@ -65,6 +65,7 @@
                 .matchTitle{
                     color: var(--blackColor);
                     font-size: 1.25rem;
+                    margin-top: -1rem;
 
                 }
                 .matchcontinent{
@@ -111,6 +112,7 @@
                 }
                 .matchdesc{
                     font-size: 13.5px;
+                    height: 5rem;
                     color: var(--textColor);
                     font-weight: 500 ;
                 }
