--- a/client/src/components/sign/Register/register.scss
+++ b/client/src/components/sign/Register/register.scss
@@ -51,7 +51,7 @@
         line-height: 2.25rem;
         font-weight: 600;
         text-align: center;
-        color: var(--mm);
+        color: var(--whiteColor);
         transform: translateY(-65px);
 
     }
