--- a/client/src/components/sign/login/login.css
+++ b/client/src/components/sign/login/login.css
@@ -44,7 +44,7 @@
   font-size: 3rem;
   font-weight: 500;
   text-align: center;
-  color: var(--mm);
+  color: var(--whiteColor);
   transform: translate(1rem, -3rem);
 }
 .bgl .logl .formtxtl {
@@ -99,7 +99,7 @@
   display: flex;
   margin-top: 1.25rem;
   gap: 0.5rem;
-  color: black;
+  color: white;
   transform: translateX(40px);
 }
 .bgl .logl .formtxtl .txtsigl span {
