--- a/client/src/components/sign/login/login.scss
+++ b/client/src/components/sign/login/login.scss
@@ -57,7 +57,7 @@ width: 100%;
             font-size: 3rem;
             font-weight: 500;
             text-align: center;
-            color: var(--mm);
+            color: var(--whiteColor);
             transform: translate(1rem,-3rem);
 
         }
@@ -120,7 +120,7 @@ width: 100%;
                 display: flex;
                 margin-top: 1.25rem;
                 gap: 0.5rem;
-                color: black;
+                color: white;
                 transform: translateX(40px);
 
                 span {
