--- a/client/src/components/usercomp/navuser.scss
+++ b/client/src/components/usercomp/navuser.scss
@@ -21,7 +21,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: var(--whiteColor);
+    background-color: rgb(40,40,40);
     width: 100%;
     height: 11%;
     padding: 1rem;
@@ -30,7 +30,7 @@ header {
 
 
     .logo {
-        color: var(--blackColor);
+        color: var(--whiteColor);
         font-weight: 600;
         cursor: pointer;
         align-items: center;
@@ -38,7 +38,7 @@ header {
 
         .icon {
             font-size: 25px;
-            color: var(--blackColor);
+            color: var(--whiteColor);
             transform: translateY(5px);
         }
 
@@ -153,7 +153,7 @@ header {
 
                 .navItem {
                     .navLink {
-                        color: var(--textColor);
+                        color: var(--whiteColor);
                         padding: 0 2.6rem;
                         font-size: 0.9rem;
                         font-weight: 500;
