--- a/client/src/pages/internautepages/pagescss/demande.css
+++ b/client/src/pages/internautepages/pagescss/demande.css
@@ -21,14 +21,13 @@
 }
 
 .demande {
-  width: 80%;
-  height: 100;
+  width: 100%;
+  height: 40rem;
 }
 .demande .selectedd {
   height: 10rem;
   width: 10rem;
-  transform: translate(29rem, -7rem);
-  display: inline;
+  transform: translate(20rem, -16.5rem);
   border-radius: 2rem;
   border: 3px dotted var(--mm);
 }
@@ -37,22 +36,29 @@
   height: 100%;
   width: 61rem;
   overflow: hidden;
+  transform: translate(-8.1rem, -8.15rem);
+  border-top-left-radius: 3rem;
+  border-bottom-left-radius: 3rem;
 }
 .demande .vidm .vidmm {
   position: absolute;
   width: 22.4rem;
 }
 .demande .demandeform {
-  width: 64rem;
+  width: 70rem;
   height: 39.8rem;
-  background: white;
+  background: var(--cardBG);
   border-top-right-radius: 3rem;
   border-bottom-right-radius: 3rem;
   box-shadow: 0 2px 4px rgba(2, 15, 29, 0.242);
-  transform: translate(15rem);
+  padding: 130px;
+  margin: 0 auto;
+  transform: translateY(8rem);
+  border-top-left-radius: 3rem;
+  border-bottom-left-radius: 3rem;
 }
 .demande .demandeform .orattrb {
-  width: 10rem;
+  width: 12.4rem;
   border: 0;
   border-bottom: 2px solid var(--greytext);
   outline: 0;
@@ -61,7 +67,7 @@
   padding: 7px 0;
   background: transparent;
   transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
-  transform: translate(23rem, -7rem);
+  transform: translate(15rem, -7rem);
 }
 .demande .demandeform .orattrb::-moz-placeholder {
   color: gray;
@@ -79,7 +85,6 @@
 }
 .demande .demandeform .ownerattrb {
   margin: 0 auto;
-  transform: translateY(9rem);
   width: 70%;
   height: 5rem;
   border-radius: 1rem;
@@ -89,7 +94,7 @@
   margin-top: 2rem;
 }
 .demande .demandeform .fieldattrb {
-  transform: translate(23rem, 7.5rem);
+  transform: translate(15rem, -2rem);
   margin-left: 1rem;
 }
 .demande .demandeform .fieldattrb .fiettrb {
@@ -120,7 +125,7 @@
   border-image-slice: 1;
 }
 .demande .demandeform .fieldattrb .fiettrbn {
-  transform: translateY(-5rem);
+  transform: translate(-5.5rem, -5rem);
   width: 37rem;
   border: 0;
   border-bottom: 2px solid var(--greytext);
@@ -172,7 +177,7 @@
   transform: translateY(30px);
 }
 .demande .demandeform .fieldattrb .btdemande {
-  transform: translate(27rem);
+  transform: translate(34.5rem);
   margin-bottom: 5rem;
   width: 10rem;
   height: 3rem;
