--- a/client/src/pages/internautepages/pagescss/demande.scss
+++ b/client/src/pages/internautepages/pagescss/demande.scss
@@ -25,14 +25,13 @@
 }
 
 .demande {
-  width: 80%;
-  height: 100;
+  width: 100%;
+  height: 40rem;
 
     .selectedd {
         height: 10rem;
         width: 10rem;
-        transform: translate(29rem, -7rem);
-        display: inline;
+        transform: translate(20rem, -16.5rem);
         border-radius: 2rem;
         border: 3px dotted var(--mm);
 
@@ -43,10 +42,15 @@
         height: 100%;
         width: 61rem;
         overflow: hidden;
+        transform: translate(-8.1rem,-8.15rem);
+        border-top-left-radius: 3rem;
+        border-bottom-left-radius: 3rem;
+
 
         .vidmm {
             position: absolute;
             width: 22.4rem;
+          
 
 
         }
@@ -57,21 +61,21 @@
 
     .demandeform {
         
-
-        width: 64rem;
+        width: 70rem;
         height: 39.8rem;
-        background: white;
+        background: var(--cardBG);
         border-top-right-radius: 3rem;
         border-bottom-right-radius: 3rem;
         box-shadow: 0 2px 4px rgba(2, 15, 29, 0.242);
-        transform: translate(15rem);
-
-
-
+        padding: 130px;
+        margin: 0 auto;
+        transform: translateY(8rem);
+        border-top-left-radius: 3rem;
+        border-bottom-left-radius: 3rem;
 
 
         .orattrb {
-            width: 10rem;
+            width: 12.4rem;
             border: 0;
             border-bottom: 2px solid var(--greytext);
             outline: 0;
@@ -80,7 +84,7 @@
             padding: 7px 0;
             background: transparent;
             transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
-            transform: translate(23rem,-7rem);
+            transform: translate(15rem,-7rem);
 
 
             &::placeholder {
@@ -103,7 +107,6 @@
 
 
             margin: 0 auto;
-            transform: translateY(9rem);
             width: 70%;
             height: 5rem;
             border-radius: 1rem;
@@ -118,7 +121,7 @@
         }
 
         .fieldattrb {
-            transform: translate(23rem,7.5rem);
+            transform: translate(15rem,-2rem);
             margin-left: 1rem;
 
             .fiettrb {
@@ -150,7 +153,7 @@
 
             }
             .fiettrbn{
-                transform: translateY(-5rem);
+                transform: translate(-5.5rem,-5rem);
 
                 width: 37rem;
                 border: 0;
@@ -217,7 +220,7 @@
             }
 
             .btdemande {
-                transform: translate(27rem );
+                transform: translate(34.5rem ,);
                 margin-bottom: 5rem;
                 width: 10rem;
                 height: 3rem;
